--- a/backend/coverage_reports/latest/class_index.html
+++ b/backend/coverage_reports/latest/class_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">63%</span>
+            <span class="pc_cov">93%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -57,7 +57,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.9.2">coverage.py v7.9.2</a>,
-            created at 2025-07-03 21:37 +0200
+            created at 2025-07-04 13:40 +0200
         </p>
     </div>
 </header>
@@ -90,11 +90,11 @@
                 <td class="name left"><a href="z_5f5a17c013354698_api_urls_py.html">app\api_urls.py</a></td>
                 <td class="name left"><a href="z_5f5a17c013354698_api_urls_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>4</td>
-                <td>4</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 4">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_5f5a17c013354698_asgi_py.html">app\asgi.py</a></td>
@@ -150,21 +150,21 @@
                 <td class="name left"><a href="z_5f5a17c013354698_urls_py.html">app\urls.py</a></td>
                 <td class="name left"><a href="z_5f5a17c013354698_urls_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>3</td>
-                <td>3</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 3">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="3 3">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html#t19">app\views.py</a></td>
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html#t19"><data value='RegisterSerializer'>RegisterSerializer</data></a></td>
                 <td>2</td>
-                <td>2</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 2">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="2 2">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html#t20">app\views.py</a></td>
@@ -190,11 +190,11 @@
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html#t35">app\views.py</a></td>
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html#t35"><data value='DashboardView'>DashboardView</data></a></td>
                 <td>7</td>
-                <td>7</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 7">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="7 7">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html#t57">app\views.py</a></td>
@@ -230,11 +230,11 @@
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html">app\views.py</a></td>
                 <td class="name left"><a href="z_5f5a17c013354698_views_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>32</td>
-                <td>32</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 32">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="32 32">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_5f5a17c013354698_wsgi_py.html">app\wsgi.py</a></td>
@@ -439,42 +439,42 @@
             <tr class="region">
                 <td class="name left"><a href="z_38948ce8bc800c4e_tests_py.html">goals\tests.py</a></td>
                 <td class="name left"><a href="z_38948ce8bc800c4e_tests_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>84</td>
+                <td>106</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="84 84">100%</td>
+                <td class="right" data-ratio="106 106">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_38948ce8bc800c4e_urls_py.html">goals\urls.py</a></td>
                 <td class="name left"><a href="z_38948ce8bc800c4e_urls_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>5</td>
-                <td>5</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 5">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="5 5">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_38948ce8bc800c4e_views_py.html#t14">goals\views.py</a></td>
                 <td class="name left"><a href="z_38948ce8bc800c4e_views_py.html#t14"><data value='GoalViewSet'>GoalViewSet</data></a></td>
                 <td>27</td>
-                <td>27</td>
-                <td>0</td>
                 <td>6</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 33">0%</td>
+                <td>6</td>
+                <td>2</td>
+                <td class="right" data-ratio="25 33">76%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_38948ce8bc800c4e_views_py.html">goals\views.py</a></td>
                 <td class="name left"><a href="z_38948ce8bc800c4e_views_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>22</td>
-                <td>22</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 22">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="22 22">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_799887e2301a09ca___init___py.html">habits\__init__.py</a></td>
@@ -515,6 +515,56 @@
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="4 4">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t7">habits\factories.py</a></td>
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t7"><data value='HabitFactory'>HabitFactory</data></a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t8">habits\factories.py</a></td>
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t8"><data value='Meta'>HabitFactory.Meta</data></a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t17">habits\factories.py</a></td>
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t17"><data value='HabitLogFactory'>HabitLogFactory</data></a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t18">habits\factories.py</a></td>
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html#t18"><data value='Meta'>HabitLogFactory.Meta</data></a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html">habits\factories.py</a></td>
+                <td class="name left"><a href="z_799887e2301a09ca_factories_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
+                <td>17</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="17 17">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_306da91e26d1596c_0001_initial_py.html#t8">habits\migrations\0001_initial.py</a></td>
@@ -640,41 +690,41 @@
                 <td class="name left"><a href="z_799887e2301a09ca_serializers_py.html">habits\serializers.py</a></td>
                 <td class="name left"><a href="z_799887e2301a09ca_serializers_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>12</td>
-                <td>12</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 12">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="12 12">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_799887e2301a09ca_tests_py.html">habits\tests.py</a></td>
                 <td class="name left"><a href="z_799887e2301a09ca_tests_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>1</td>
+                <td>54</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="1 1">100%</td>
+                <td class="right" data-ratio="54 54">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_799887e2301a09ca_urls_py.html">habits\urls.py</a></td>
                 <td class="name left"><a href="z_799887e2301a09ca_urls_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>7</td>
-                <td>7</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 7">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="7 7">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_799887e2301a09ca_views_py.html#t8">habits\views.py</a></td>
                 <td class="name left"><a href="z_799887e2301a09ca_views_py.html#t8"><data value='HabitViewSet'>HabitViewSet</data></a></td>
                 <td>3</td>
-                <td>3</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 3">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="3 3">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_799887e2301a09ca_views_py.html#t23">habits\views.py</a></td>
@@ -690,11 +740,11 @@
                 <td class="name left"><a href="z_799887e2301a09ca_views_py.html">habits\views.py</a></td>
                 <td class="name left"><a href="z_799887e2301a09ca_views_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>15</td>
-                <td>15</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 15">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="15 15">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="manage_py.html">manage.py</a></td>
@@ -705,6 +755,36 @@
                 <td>2</td>
                 <td>0</td>
                 <td class="right" data-ratio="0 13">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_a44f0ac069e85531___init___py.html">tests\__init__.py</a></td>
+                <td class="name left"><a href="z_a44f0ac069e85531___init___py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_a44f0ac069e85531_test_api_endpoints_py.html#t15">tests\test_api_endpoints.py</a></td>
+                <td class="name left"><a href="z_a44f0ac069e85531_test_api_endpoints_py.html#t15"><data value='APICRUDTests'>APICRUDTests</data></a></td>
+                <td>100</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="100 100">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_a44f0ac069e85531_test_api_endpoints_py.html">tests\test_api_endpoints.py</a></td>
+                <td class="name left"><a href="z_a44f0ac069e85531_test_api_endpoints_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
+                <td>40</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="40 40">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_1411a550f4db4113___init___py.html">todos\__init__.py</a></td>
@@ -879,54 +959,54 @@
             <tr class="region">
                 <td class="name left"><a href="z_1411a550f4db4113_tests_py.html">todos\tests.py</a></td>
                 <td class="name left"><a href="z_1411a550f4db4113_tests_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>93</td>
+                <td>94</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="93 93">100%</td>
+                <td class="right" data-ratio="94 94">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_1411a550f4db4113_urls_py.html">todos\urls.py</a></td>
                 <td class="name left"><a href="z_1411a550f4db4113_urls_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>6</td>
-                <td>6</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 6">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="6 6">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_1411a550f4db4113_views_py.html#t7">todos\views.py</a></td>
                 <td class="name left"><a href="z_1411a550f4db4113_views_py.html#t7"><data value='TodoTaskViewSet'>TodoTaskViewSet</data></a></td>
                 <td>2</td>
-                <td>2</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 2">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="2 2">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_1411a550f4db4113_views_py.html">todos\views.py</a></td>
                 <td class="name left"><a href="z_1411a550f4db4113_views_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>9</td>
-                <td>9</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 9">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="9 9">100%</td>
             </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>555</td>
-                <td>197</td>
+                <td>788</td>
+                <td>47</td>
                 <td>0</td>
                 <td>20</td>
-                <td>3</td>
-                <td class="right" data-ratio="363 575">63%</td>
+                <td>5</td>
+                <td class="right" data-ratio="750 808">93%</td>
             </tr>
         </tfoot>
     </table>
@@ -938,7 +1018,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.9.2">coverage.py v7.9.2</a>,
-            created at 2025-07-03 21:37 +0200
+            created at 2025-07-04 13:40 +0200
         </p>
     </div>
     <aside class="hidden">
